log
Fri Mar 26 06:15:20 UTC 2021: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:37:9: error: unused variable ‘lista’ [-Werror=unused-variable]
   List *lista = (List*) malloc(sizeof(List));
         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 06:15:28 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c569efc
Fri Mar 26 06:16:04 UTC 2021: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
34f76ca
Fri Mar 26 06:22:17 UTC 2021: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
8a81b85
Fri Mar 26 06:22:53 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d57a5ac
Fri Mar 26 06:23:39 UTC 2021: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|5
total_score: 15/70
d7ff3c3
Fri Mar 26 06:30:00 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
49655de
Fri Mar 26 06:31:21 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
756c09f
Fri Mar 26 06:34:08 UTC 2021: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
969e14f
Fri Mar 26 06:35:32 UTC 2021: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
cfe5693
Fri Mar 26 06:44:00 UTC 2021: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  10|2
total_score: 45/70
3e18983
Fri Mar 26 06:44:34 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7e155f4
Fri Mar 26 06:44:55 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
ec6ba9b
Fri Mar 26 06:45:11 UTC 2021: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
a639993
Fri Mar 26 07:12:12 UTC 2021: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
620028f
Fri Mar 26 07:12:50 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e3bc36d
Fri Mar 26 07:15:00 UTC 2021: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
878f444
Fri Mar 26 07:16:39 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
cf0a7e7
Fri Mar 26 07:23:10 UTC 2021: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
b5b6505
Fri Mar 26 07:23:36 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2e434a3
Fri Mar 26 07:23:51 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
8ef382c
Fri Mar 26 07:26:31 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
c014a6e
Fri Mar 26 07:27:37 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
35ea605
Fri Mar 26 07:31:09 UTC 2021: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
2f883a2
Fri Mar 26 19:20:19 UTC 2021: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
681e09e
Fri Mar 26 19:21:46 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
e3e3f1e
Fri Mar 26 19:29:23 UTC 2021: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
93d62c6
Fri Mar 26 19:29:37 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
0792680
Fri Mar 26 19:40:12 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
e617cb5
Fri Mar 26 19:40:49 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
6bfa210
Fri Mar 26 19:41:28 UTC 2021: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|1
total_score: 55/70
4ca0f96
Fri Mar 26 19:43:19 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
651acd0
Fri Mar 26 19:43:37 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
ec57972
